--- a/site/index.html
+++ b/site/index.html
@@ -19,7 +19,7 @@ body{
 	color: #fff;
 	font-family: Arial;
 	font-size: 12px;
-	text-shadow: 2px 2px #ff0000;
+	text-shadow: 2px 2px #000;
 }
 
 .body{
