--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>Random Login Form - CodePen</title>
+  <title>Legend Chat</title>
 
     <style>
 @import url(http://fonts.googleapis.com/css?family=Exo:100,200,400);
