--- a/site/index.html
+++ b/site/index.html
@@ -165,9 +165,11 @@ body{
 		</div>
 		<br>
 		<div class="login">
+			<form action="login.php" method="get">
 				<input type="text" placeholder="username" name="user"><br>
 				<input type="password" placeholder="password" name="password"><br>
 				<input type="button" value="Login">
+			</form>
 		</div>
 
   <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
