--- a/site/index.html
+++ b/site/index.html
@@ -168,7 +168,7 @@ body{
 			<form action="login.php" method="get">
 				<input type="text" placeholder="username" name="user"><br>
 				<input type="password" placeholder="password" name="password"><br>
-				<input type="button" value="Login">
+				<input type="submit" value="Login">
 			</form>
 		</div>
 
